src/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
.flex,
.flex-col,
.centered-flex {
    display: flex;
}
.flex-col {
    flex-direction: column;
}
.centered-flex {
    justify-content: center;
    align-items: center;
}
body > .container {
    min-height: 100vh;
    padding: 15px 0px;
}
nav {
    flex: 1;
    align-items: center;
    justify-content: space-between;
    padding: 1rem;
    gap: 1rem;
    max-width: 230px;
}
nav div {
    gap: 10px;
}
nav .sidebar-header {
    align-items: center;
    margin-right: 50px;
    flex-shrink: 0;
}
nav .sidebar-header .icon {
    border-radius: 30px;
}
nav .icon-list {
    flex-shrink: 0;
    gap: 0.5rem;
}
.nav-btn {
    all: unset;
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 8px;
    padding: 0.5em;

    font-size: 1rem;
}
nav .user-projects {
    flex-grow: 1;
    gap: 0.5rem;
    width: 100%;
    align-items: center;
}
nav .user-projects .project-header {
    width: 100%;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid black;
    padding: 10px;
    font-size: 1.3rem;
}
nav .user-projects .project-header .add-project {
    cursor: pointer;
    padding: 4px 8px;
    border-radius: 5px;
}  
.project {
    width: 100%;
    gap: 10px;
}
.project-btn {
    display: flex;
    justify-content: center;
    gap: 8px;
    font-size: 1.1rem;
}
main {
    flex: 4;
}
.icon {
    width: 30px;
    height: auto;
}
button {
    background: none;
    border: none;
    cursor: pointer;
}

